# actix_full_template

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile
.github/: dependabot.yml
.github/CD/: docker-build.yml
.github/CI/: check.yml  cleanup.yml
.github/maybe_later/: gh-pages.yml  scheduled.yml
.github/maybe_never/: nostd.yml  safety.yml
.github/workflows/: check.yml  scheduled.yml
benches/: lib_benches.rs
manifests/: cluster-issuer.yml  kustomization.yml
manifests/app/: deployment.yml  ingress.yml  service.yml
manifests/mongodb/: configmap.yml
src/: config.rs  db.rs  error.rs  handlers.rs  lib.rs  logging.rs  main.rs  prelude.rs
src/tests/: mod.rs
tests/: main.rs  test.rs
