[package]
name = "template"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Hyll <alexander@hyll.nu>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
toml = "0"
tracing = { version = "0", features = ["log"] }
rayon = "1"
clap = "4"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "template"

[dev-dependencies]
criterion = { version = "0", features = ["async_tokio"] }

[[bench]]
name = "lib_benches"
harness = false
